c4prj1_deck/grade.txt
Grading at Tue Apr  2 05:14:36 UTC 2019
Compiling deck.c -> deck.o
deck.c: In function ‘add_empty_card’:
deck.c:59:25: error: implicit declaration of function ‘make_empty_card’ [-Werror=implicit-function-declaration]
   card_t * empty_card = make_empty_card();
                         ^
deck.c:59:25: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
deck.c: In function ‘build_remaining_deck’:
deck.c:155:12: error: implicit declaration of function ‘is_empty_card’ [-Werror=implicit-function-declaration]
       if (!is_empty_card(hands[i]->cards[j])) {
            ^
deck.c: In function ‘fprint_hand’:
deck.c:223:5: error: implicit declaration of function ‘fprint_card’ [-Werror=implicit-function-declaration]
     fprint_card(f, hand->cards[i][0]);
     ^
deck.c: In function ‘deck_contains’:
deck.c:269:8: error: implicit declaration of function ‘card_ptr_comp’ [-Werror=implicit-function-declaration]
     if(card_ptr_comp(&deck_card_ptr, &target_card_ptr) == 0) {
        ^
deck.c: In function ‘shuffle’:
deck.c:287:5: error: implicit declaration of function ‘swap_cards’ [-Werror=implicit-function-declaration]
     swap_cards(d->cards[i], d->cards[rand() % d->n_cards]);
     ^
deck.c: In function ‘sort_cards’:
deck.c:327:51: error: ‘card_ptr_comp’ undeclared (first use in this function)
   qsort(array, nelements, sizeof(const card_t *), card_ptr_comp);
                                                   ^
deck.c:327:51: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation of deck.c failed

Overall Grade: F
